--- a/packages.tex
+++ b/packages.tex
@@ -49,7 +49,7 @@
   breaklines=true,                % sets automatic line breaking
   breakatwhitespace=true,         % sets if automatic breaks should only happen at whitespace
   escapeinside={(*}{*)},
-  literate={->}{{$\rightarrow$}}1 {Top}{{$\top$}}1 {=>}{{$\Rightarrow$}}1 {/\\}{{$\Lambda$}}1,
+  literate={->}{{$\rightarrow$}}1 {Top}{{$\top$}}1 {o+o}{{$\oplus$}}1 {=>}{{$\Rightarrow$}}1 {/\\}{{$\Lambda$}}1,
   tabsize=2,
   commentstyle=\color{purple}\ttfamily,
   stringstyle=\color{red}\ttfamily,
