--- a/packages.tex
+++ b/packages.tex
@@ -49,7 +49,7 @@
   breaklines=true,                % sets automatic line breaking
   breakatwhitespace=true,         % sets if automatic breaks should only happen at whitespace
   escapeinside={(*}{*)},
-  literate={->}{{$\rightarrow$}}1 {Top}{{$\top$}}1 {o+o}{{$\oplus$}}1 {=>}{{$\Rightarrow$}}1 {/\\}{{$\Lambda$}}1,
+  literate={lam}{{$\lambda$}}1 {->}{{$\rightarrow$}}1 {Top}{{$\top$}}1 {o+o}{{$\oplus$}}1 {=>}{{$\Rightarrow$}}1 {/\\}{{$\Lambda$}}1,
   tabsize=2,
   commentstyle=\color{purple}\ttfamily,
   stringstyle=\color{red}\ttfamily,
@@ -65,6 +65,14 @@
   xleftmargin  = 3mm,
   morestring=[b]'
 }
+
+
+\lstdefinelanguage{simple}{
+  keywords={letrec, in, let},
+  identifierstyle=\color{black},
+  xleftmargin  = 3mm,
+}
+
 
 \lstdefinelanguage{gbeta}{%
   language     = java,
